[FIX][CSS] Use fix from Strasa for div#tikihelp invisibly covering up the right hand column and/or textarea scrollbar in all other themes (including transitional and layout).
Unfortunately only works with an absolute pixel height value - 400px for now is small but safe.

TODO for 3.1 - replace with dedicated JS function to use 95% (or whatever) of window height


git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/3.0@18648 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/coelesce.css
+++ b/styles/coelesce.css
@@ -962,7 +962,7 @@ div#tikihelp {
 	position:fixed;
 	right: 0;
 	top: 3px;
-	height: 95%;
+	height: auto; /* if there was height specified it covered the right column content "invisibly" making part of it unclickable (from strasa) */
 	max-width: 50%;
 	padding:0;
 	margin:0;
@@ -977,6 +977,8 @@ div.help_icon {
 	border: 0;
 	margin: 0;
 	padding: 0;
+	height: 48px;
+	text-align: right;
 }
 div.help_icon a:hover {
 	text-decoration: none;
@@ -1001,6 +1003,7 @@ div.help_sections {
 	background-color: #AAC9E9;
 	max-height : 95%;
 	overflow: auto;
+	height: 400px;
 }
 div.help_section {
 	margin: 5px;
