--- a/styles/feb12.css
+++ b/styles/feb12.css
@@ -791,8 +791,8 @@ div.adminanchors {background: #4179AA !important}
 div#tikihelp {
 	position: fixed;
 	right: 0;
-	top: 125px;
-	height: 75%;
+	top: 3px;
+	height: auto; /* if there was height specified it covered the right column content "invisibly" making part of it unclickable (from strasa) */
 	max-width: 50%;
 	padding: 0;
 	margin: 0;
@@ -805,7 +805,9 @@ div#tikihelp {
 div.help_icon {
 	border: 0;
 	margin: 0;
-	padding: 0}
+	padding: 0;
+	height: 48px;
+	text-align: right}
 
 div.help_icon a:hover {
   text-decoration: none;}
@@ -829,7 +831,8 @@ div.help_sections {
 	padding:  2px;
 	background-color: #AAC9E9;
 	max-height : 95%;
-	overflow: auto}
+	overflow: auto;
+	height: 400px}
 
 div.help_section {
 	margin: 5px;
