--- a/styles/layout/layout.css
+++ b/styles/layout/layout.css
@@ -583,7 +583,7 @@ div#tikihelp {
 	position: fixed;
 	right: 0;
 	top: 3px;
-	height: 95%;
+	height: auto; /* if there was height specified it covered the right column content "invisibly" making part of it unclickable (from strasa) */
 	max-width: 50%;
 	padding: 0;
 	margin: 0;
@@ -596,7 +596,9 @@ div#tikihelp {
 div.help_icon {
 	border: 0;
 	margin: 0;
-	padding: 0}
+	padding: 0;
+	height: 48px;
+	text-align: right}
 
 div.help_icon img {
 	vertical-align: middle;
@@ -617,7 +619,8 @@ div.help_sections {
 	padding:  2px;
 	background: #aac9e9;
 	max-height : 95%;
-	overflow: auto}
+	overflow: auto;
+	height: 400px}
 
 div.help_section {
 	margin: 5px;
