--- a/styles/thenews.css
+++ b/styles/thenews.css
@@ -898,7 +898,7 @@ div#tikihelp {
 	position: fixed;
 	right: 0;
 	top: 25px;
-	height: 75%;
+	height: auto; /* if there was height specified it covered the right column content "invisibly" making part of it unclickable (from strasa) */
 	max-width: 50%;
 	padding: 0;
 	margin: 0;
@@ -913,6 +913,8 @@ div.help_icon {
 	border: 0;
 	margin: 0;
 	padding: 0;
+	height: 48px;
+	text-align: right;
 }
 div.help_icon a:hover {
   text-decoration: none;
@@ -937,6 +939,7 @@ div.help_sections {
 	background-color: #AAC9E9;
 	max-height : 95%;
 	overflow: auto;
+	height: 400px;
 }
 div.help_section {
 	margin: 5px;
